# NDB-authentication-thesis-implementation

./: .gitignore  AuthenticationSystem.pro  CLIInterface.cpp  CLIInterface.h  CMakeLists.txt  DB.cpp  DB.h  NDB.cpp  NDB.h  NDBGenerator.cpp  NDBGenerator.h  PasswordStrengthValidator.cpp  PasswordStrengthValidator.h  README.md  VectorView.h  main.cpp  prefix-reverse.py  to_dimacs.py
AuthenticationSystem/: AuthenticationManager.cpp  AuthenticationManager.h  Config.h  DatabaseAccess.cpp  DatabaseAccess.h  LoginScreen.cpp  LoginScreen.h  LoginScreen.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RegisterScreen.cpp  RegisterScreen.h  RegisterScreen.ui  UserScreen.cpp  UserScreen.h  UserScreen.ui
Generators/: NDBGenerator.cpp  NDBGenerator.h  NDBPrefixGenerator.cpp  NDBPrefixGenerator.h  NDBRandomizedGenerator.cpp  NDBRandomizedGenerator.h  NDBRandomizedGenerator2.cpp  NDBRandomizedGenerator2.h  NDB_0HiddenGenerator.cpp  NDB_0HiddenGenerator.h  NDB_Generator.cpp  NDB_Generator.h  NDB_HybridGenerator.cpp  NDB_HybridGenerator.h  NDB_KHiddenGenerator.cpp  NDB_KHiddenGenerator.h  NDB_PrefixGenerator.cpp  NDB_PrefixGenerator.h  NDB_QHiddenGenerator.cpp  NDB_QHiddenGenerator.h  NDB_RandomizedGenerator.cpp  NDB_RandomizedGenerator.h  NDB_RandomizedGenerator2.cpp  NDB_RandomizedGenerator2.h  NDB_RandomizedOldGenerator.cpp  NDB_RandomizedOldGenerator.h
Interfaces/: Walksat.h  WalksatInterface.cpp  WalksatInterface.h  ZChaffInterface.cpp  ZChaffInterface.h  walksat.c
Streams/: DimacsFileStream.cpp  DimacsFileStream.h  DummyStream.cpp  DummyStream.h  FileStream.cpp  FileStream.h  NDBFileStream.cpp  NDBFileStream.h  NDBStream.cpp  NDBStream.h  Stream.h
Tests/: DistributionBatchTest.cpp  DistributionBatchTest.h  DistributionTest.cpp  DistributionTest.h  GenerationTimeTest.cpp  GenerationTimeTest.h  GeneratorBatchTest.h  HybridBatchTest.cpp  HybridBatchTest.h  KHiddenBatchTest.cpp  KHiddenBatchTest.h  PrefixBatchTest.cpp  PrefixBatchTest.h  QHiddenBatchTest.cpp  QHiddenBatchTest.h  RandomizerBatchTest.cpp  RandomizerBatchTest.h  SuperfluousStringBatchTest.cpp  SuperfluousStringBatchTest.h  SuperfluousStringTest.cpp  SuperfluousStringTest.h  WalkSatSolveTest.cpp  WalkSatSolveTest.h  ZChaffSolveTest.cpp  ZChaffSolveTest.h
Utils/: Benchmark.h  Checksum.h  FileUtils.h  NDBUtils.h  Permutation.h  RandomSeedProvider.h  RandomValuesGenerator.cpp  RandomValuesGenerator.h
Validator/: NDBValidator.cpp  NDBValidator.h
